--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -67,7 +67,7 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="./src/projectile-motion-application.html" target="_" style="text-decoration: none;">
+                <a id="fullscreen_link" href="./src/projectile-motion-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Projectile-Motion/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -81,7 +81,7 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="./src/projectile-motion-application-AR.html" target="_" style="text-decoration: none;">
+                <a id="ar_link" href="./src/projectile-motion-application-AR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -105,7 +105,7 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="./src/projectile-motion-application-VR.html" target="_" style="text-decoration: none;">
+                <a id="vr_link" href="./src/projectile-motion-application-VR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -191,6 +191,37 @@
     </footer>
     <script src="../js/script.js"></script>
     <script>
+
+        let currentPage = location.href;
+
+        // listen for changes
+        setInterval(function () {
+            if (currentPage != location.href) {
+                // page has changed, set new page as 'current'
+                currentPage = location.href;
+
+                changeLanguageApp();
+                console.clear();
+            }
+        }, 500);
+
+        function changeLanguageApp() {
+            var language = location.search;
+            if (language.length != 0) {
+                document.getElementById("scene").src = "./src/projectile-motion-application.html" + language;
+                document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html" + language);
+                document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html" + language);
+                document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html" + language);
+            }
+            else {
+                document.getElementById("scene").src = "./src/projectile-motion-application.html";
+                document.getElementById("fullscreen_link").href = ("./src/projectile-motion-application.html");
+                document.getElementById("vr_link").href = ("./src/projectile-motion-application-VR.html");
+                document.getElementById("ar_link").href = ("./src/projectile-motion-application-AR.html");
+            }
+        }
+
+        changeLanguageApp();
         // ã
 
         TRANSLATION.add(
