all vr modes warnings changed

--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -121,17 +121,10 @@
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     <div id="warning-hmd-1">
                         In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
-                        joystick even
-                        though it is possible to use the app without those equipments.
+                        joystick even though it is possible to use the app without those equipments.
                     </div>
                 </p>
-                <p class="more-modes-text">
-                    <div id="warning-hmd-2">
-                        Using mobile devices, press the VR button in bottom right conner before inserting your device in the
-                        HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
-                        button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
-                        if your device is sensitive to touch.
-                    </div>
+
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     <div id="warning-vr">
@@ -139,7 +132,6 @@
                                                                              target="_blank">Google Virtual Reality services</a>
                         on the first access.
                     </div>
-                </p>
                 </p>
 
             </div>
