--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -120,8 +120,7 @@
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     <div id="warning-hmd-1">
-                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
-                        joystick even though it is possible to use the app without those equipments.
+                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
                     </div>
                 </p>
 
@@ -257,9 +256,8 @@
 
         TRANSLATION.add(
             '#warning-hmd-1',
-            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
-                app without those equipments.`,
-            `Para uma experiência completa no modo RV, é necessário um HMD (head-mounted display) e um controle joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display).`,
+            `Para uma experiência completa no modo RV, é necessário um HMD (head-mounted display).`
         )
 
         TRANSLATION.add(
