Update image of museum to historical figures application

--- a/projects/historical-figures.html
+++ b/projects/historical-figures.html
@@ -157,7 +157,7 @@
         <h5><b>Reference:</b></h5>
         <p>
         <i>
-            "Museum". Disponível em:〈 <a href="http://www.samrohn.com/360-panorama/frick-collection-nyc-360-tour/">http://www.samrohn.com/360-panorama/frick-collection-nyc-360-tour/</a> 〉<br>
+            "Amir Timur Museum". Disponível em:〈 <a href="https://pixexid.com/image/8s2711b-tamellan-museum">https://pixexid.com/image/8s2711b-tamellan-museum</a> 〉<br>
             "Adolf Hitler". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Adolf_Hitler_cropped_restored.jpg">https://commons.wikimedia.org/wiki/File:Adolf_Hitler_cropped_restored.jpg</a> 〉<br>
             "Alan Turing". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Alan_Turing_Aged_16.jpg">https://commons.wikimedia.org/wiki/File:Alan_Turing_Aged_16.jpg</a> 〉<br>
             "Albert Einstein". Disponível em:〈 <a href="https://search.creativecommons.org/photos/ba6f5320-95d7-4727-9989-1faadae4f249">https://search.creativecommons.org/photos/ba6f5320-95d7-4727-9989-1faadae4f249</a> 〉<br>
