--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -47,7 +47,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="./src/architecture-application.html" height="500"
+            <iframe id="scene" class="w3-col l8" src="src/architecture-application.html" height="500"
                 style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -71,7 +71,7 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a href="./src/architecture-application.html" target="_" style="text-decoration: none;">
+                <a id="fullscreen_link" href="./src/architecture-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                         style="background: url('img/Architecture/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
@@ -185,6 +185,20 @@
     </footer>
     <script src="../js/script.js"></script>
     <script>
+        function changeLanguageApp() {
+            var language = location.search;
+            if (language.length != 0) {
+                document.getElementById("scene").src = "./src/virtual-travel-application.html" + language;
+                document.getElementById("fullscreen_link").href = ("./src/architecture-application.html" + language);
+            }
+        }
+
+        TRANSLATION.onTranslate = function () {
+            // document.querySelector('#scene').src = 'src/architecture-application.html?lang=' + TRANSLATION.currentLang;
+            document.querySelector('#scene').contentWindow.changeLanguage(TRANSLATION.currentLang);
+         
+        }
+
         TRANSLATION.add(
             '#header',
             'Architecture',
