--- a/projects/inclined-plane.html
+++ b/projects/inclined-plane.html
@@ -138,8 +138,7 @@
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
                     <div id="warning-hmd-1">
-                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
-                        joystick even though it is possible to use the app without those equipments.
+                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
                     </div>
                 </p>
 
