projectile motion pt-br fixed

--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -66,27 +66,26 @@
         <div class="w3-row-padding">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-
-                <a id="fullscreen_link" href="./src/projectile-motion-application.html" target="_" style="text-decoration: none;">
-                    <div class="more-modes w3-display-container"
-                        style="background: url('img/Projectile-Motion/blur.jpg') center;">
-                        <div class="w3-padding" style="width:100%">
-                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                            <br />
-                            <div id="fullscreen">Fullscreen</div>
+                    <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application.html', '', true);">
+                        <div class="more-modes w3-display-container"
+                             style="background: url('img/Projectile-Motion/blur.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                                <br />
+                                <div id="fullscreen">Fullscreen</div>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a id="ar_link" href="./src/projectile-motion-application-AR.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-AR.html', '', true);">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
+                         style="background: url('img/Projectile-Motion/blur-ar.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="Augmented Reality icon"
-                                style="width: 64px;" />
+                                 style="width: 64px;" />
                             <br />
                             <div id="ar">Augmented Reality</div>
                         </div>
@@ -105,7 +104,7 @@
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
 
-                <a id="vr_link" href="./src/projectile-motion-application-VR.html" target="_" style="text-decoration: none;">
+                <a href="javascript: TRANSLATION.redirect('projects/src/projectile-motion-application-VR.html', '', true);">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Projectile-Motion/blur-vr.jpg') center;">
                         <div class="w3-padding" style="width:100%">
