--- a/projects/virtual-travel.html
+++ b/projects/virtual-travel.html
@@ -54,7 +54,7 @@
 
         <!-- More modes -->
         <div class="w3-container w3-padding-32 ">
-            <h3 id="more-modes-header"class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
+            <h3 id="more-modes-header" class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
         </div>
         <div class="w3-row-padding">
 
@@ -85,6 +85,41 @@
                 </p>
             </div>
 
+        </div>
+
+        <div class="w3-container w3-padding-32 ">
+            <h3 id="images-header" class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Virtual Reality</h3>
+        </div>
+
+        <div class="w3-content w3-display-container w3-center w3-row ">
+            <img class="slide" src="./img/Travel-the-World/a.jpg" style="border:1px solid black"
+                 onclick="openModal(1)">
+            <img class="slide" src="./img/Travel-the-World/b.png" style="border:1px solid black"
+                 onclick="openModal(2)">
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
+                    onclick="plusDivs(-1) ">
+                &#10094;
+            </button>
+            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
+        </div>
+
+        <div id="modal-slideshow" class="w3-modal w3-black">
+            <div class="w3-content w3-center" style="height: 80%;">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg"
+                     style="height: 100%; border:1px solid black">
+
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg"
+                     style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot3-AR.jpeg"
+                     style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot4-AR.jpeg"
+                     style="height: 100%; border:1px solid black">
+                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
+            </div>
+
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+                  onclick="closeModal(0)" style="cursor:pointer">×</span>
         </div>
 
     </div>
